# Omni-AgentOS

./: .gitignore  README.md  ROADMAP.md  health.py
.github/workflows/: ci.yml
backend/: .env.example  main.py
backend/agents/: coder_agent.py  orchestrator.py
backend/context/: workspace_context.py
backend/data/: .gitignore
backend/models/: chat.py  message.py  ws_event.py
backend/observability/: logger.py
backend/routers/: __init__.py  chat.py  memory.py  observability.py  settings_router.py  workspace.py
backend/tests/: test_llm.py  test_orchestrate_streaming.py  test_websocket_manager.py
backend/tools/: filesystem.py
data/chroma/: chroma.sqlite3
frontend/: package-lock.json  tsconfig.json
frontend/app/: page.tsx
frontend/hooks/: use-websocket.ts
frontend/lib/: agent-styles.ts
frontend/services/: api.ts  websocket.ts
omni-agentos/backend/: main.py  pyproject.toml  requirements.txt
omni-agentos/backend/configs/: settings.py
omni-agentos/backend/dependencies/: session_store.py
omni-agentos/backend/execution/: approval_store.py
omni-agentos/backend/memory/: store.py
omni-agentos/backend/models/: __init__.py  chat.py  session.py  task.py  ws_event.py
omni-agentos/backend/routers/: approval.py  chat.py  health.py  research.py  session.py  websocket.py
omni-agentos/backend/services/: llm.py
omni-agentos/backend/tests/: test_chat_endpoint.py  test_coder_agent_routing.py  test_llm.py  test_websocket_endpoint.py
omni-agentos/backend/tools/: terminal.py  websearch.py
omni-agentos/backend/websocket/: manager.py
(+85 files in other folders)
